session3/configs/books/deployment_v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-v2
  labels:
    app: books
    version: v2
    project: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
      version: v2
      project: istio-course
  template:
    metadata:
      labels:
        app: books
        version: v2
        project: istio-course
    spec:
      serviceAccountName: servicemesh-books
      containers:
        - name: books
          image: dreamvan/books-service:2.0
          imagePullPolicy: IfNotPresent #Or use Always to download it from dockerhub
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
